negative lat/lons will no longer line wrap after the dash

--- a/ifcbdb/assets/css/site.css
+++ b/ifcbdb/assets/css/site.css
@@ -99,3 +99,7 @@ body {
 .card.h600 {
     max-height: 600px;
 }
+
+.nowrap {
+    white-space: nowrap;
+}
